arreglo de errores

--- a/TP4/EntregaFinal/style.css
+++ b/TP4/EntregaFinal/style.css
@@ -184,6 +184,7 @@ background: linear-gradient(
     list-style: none;
     padding: 0;
     margin: 0;
+    border: 4px solid #f59a44;
   }
   
   .menu span {
