--- a/TP4/EntregaFinal/style.css
+++ b/TP4/EntregaFinal/style.css
@@ -1395,3 +1395,42 @@ background: linear-gradient(
   transform: scale(4); 
   margin-bottom: 100px;
 }
+
+@keyframes scroll {
+  0% {background-position-x: 0px;}
+  100% {background-position-x: -1920px;}
+}
+
+.layer {
+  min-height: 100px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-repeat: repeat-x;
+  background-size: cover;
+}
+
+.layer-3 {        
+  top: 43%;
+  background-image: url("assets/nube1.png");     
+  animation: scroll 14s infinite linear;
+  background-size: 35%;
+}
+
+.layer-2 {        
+  top: 48%;
+  background-image: url("assets/nube3.png");     
+  animation: scroll 20s infinite linear;
+  background-size: 35%;
+
+}
+
+/* .layer-1 {        
+  top: 46%;
+  background-image: url("assets/nube2.png");     
+  animation: scroll 23s infinite linear;
+  background-size: 35%;
+
+} */
